# obj-viewer

./: .gitignore  CMakeLists.txt  README.md  vendored.sh
plat/darwin/: CMakeLists.txt
src/: main.c
src/include/: CMakeLists.txt  parser.c  parser.h  renderer.c  renderer.h  utils.c  utils.h
